src/main.scss
.delta {
    font-size: 13px;
}

@mixin arrow-sign {
    display: inline-block;
    margin: 2px 3px;
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;

    opacity: 0;
    animation: signfade .7s linear forwards;
}

@keyframes signfade {
    0% { opacity: 1; }
    50% { opacity: 1; }
    100% { opacity: 0; }
}

.arrow-sign-positive {
    @include arrow-sign;
    border-bottom: 5px solid #6bad10;
}

.arrow-sign-negative {
    @include arrow-sign;
    border-top: 5px solid #d0021b;
}

.footer-unit-value-percent {
    font-size: 16px;
}

:global {
    .footer-unit {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

$control-menu-item-border: 1px solid #ededed;
$control-menu-item-color: #777777;

.control-menu-container {
    display: inline-flex;
    flex-direction: column;

    .control-menu-button {
        display: inline-flex;
        align-items: center;

        &:hover {
            background-color: #4E515A;
        }

        &::before {
            // Initiates loading of font weight 600;
            content: "a";
            font-weight: 600;
            user-select: none;
            color: transparent;
            width: 0;
            height: 0;
            position: absolute;
        }

        &.control-menu-button-active {
            background-color: #FFFFFF;

            .control-menu-logo,
            .control-menu-button-date {
                filter: brightness(0.8);
            }
        }

        .control-menu-logo {
            background-size: contain;
            margin-right: -12px !important;
        }

        .control-menu-button-date {
            display: inline-block;
            color: #FFFFFF;
            font-size: 18px;
            margin-right: 12px;
            user-select: none;
        }
    }

    .control-menu {
        display: flex;
        flex-direction: column;
        position: absolute;
        width: 362px;
        max-height: 410px;
        background-color: #FFFFFF;
        box-shadow: 1px 2px 4px -1px rgba(0,0,0,.3);

        &:not(.control-menu-open) {
            display: none;
        }

        .control-menu-header {
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            border-bottom: $control-menu-item-border;
            color: $control-menu-item-color;
            padding: 10px 12px;

            .control-menu-header-button {
                display: flex;
                align-items: center;
                cursor: pointer;
                white-space: nowrap;
                overflow: hidden;
                text-overflow: ellipsis;

                &:hover {
                    filter: brightness(1.3);
                }
            }

            .create-icon::before {
                content: "\e952";
                font-family: iconFont;
                font-style: normal;
                margin-right: 6px;
            }

            .cancel-icon::before {
                content: "\e919";
                font-family: iconFont;
                font-style: normal;
                margin-right: 6px;
            }
        }

        .control-menu-footer {
            display: flex;
            justify-content: space-between;
            font-size: x-small;
            color: $control-menu-item-color;
            padding: 0 12px;
            border-top: $control-menu-item-border;
        }
    }
}

.snapshot-list {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    overflow: auto;
    background-color: #f9f9f9;
    text-align: center;

    &:empty::before {
        content: "No snapshots found ¯\\_(ツ)_/¯ \A Create one above.";
        white-space: pre-wrap;
        padding: 10px;
        color: $control-menu-item-color;
        font-size: small;
    }

    .snapshot-item {
        display: flex;
        flex-direction: row;
        align-items: center;
        flex-wrap: nowrap;
        padding: 10px 12px;

        &:not(:last-child) {
            border-bottom: $control-menu-item-border;
        }

        &.snapshot-item-selected {
            font-weight: 600;
            background-color: #fff;
            box-shadow: 1px 1px 3px 0 rgba(44, 44, 44, .3);
            cursor: default;
            
            &::after {
                content: "Δ";
                color: #6bad10;
                font-size: 25px;
                line-height: 0;
            }
        }

        .snapshot-item-date {
            flex: 1;
            text-align: left;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            cursor: pointer;
        }

        .snapshot-item-delete-button {
            display: none;
            margin-left: 5px;
            cursor: pointer;

            &::before {
                content: "\e92f";
                font-family: iconFont;
                color: $control-menu-item-color;
            }
            &:hover::before {
                color: #CE1D1D;
            }
            &:active::before {
                font-weight: bold;
            }
        }

        &:hover:not(.snapshot-item-selected) .snapshot-item-delete-button {
            display: inline-flex;
        }
    }
}

